[gd_scene load_steps=11 format=3 uid="uid://bw2ljp43ffhlh"]

[ext_resource type="Script" path="res://src/Scripts/first_person_player.gd" id="1_fnf2j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yksil"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jp6t1"]

[sub_resource type="CylinderMesh" id="CylinderMesh_76qm2"]
material = SubResource("StandardMaterial3D_jp6t1")
top_radius = 0.08
bottom_radius = 0.08
height = 0.8

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jjsvv"]
particle_flag_align_y = true
velocity_pivot = Vector3(1.45519e-11, 1.45519e-11, 1.45519e-11)
direction = Vector3(1.45519e-11, 1.45519e-11, -1)
spread = 4.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(1.45519e-11, 1.45519e-11, 1.45519e-11)
collision_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mcrtl"]
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.933333, 0.866667, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_vsdld"]
material = SubResource("StandardMaterial3D_mcrtl")
size = Vector2(0.01, 5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4bo7n"]
direction = Vector3(1.45519e-11, 1, 1.45519e-11)
initial_velocity_min = 2.5
initial_velocity_max = 2.5
collision_mode = 1
collision_friction = 0.0
collision_bounce = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hneq6"]
albedo_color = Color(0.427451, 0.956863, 0, 1)
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_n1ffu"]
material = SubResource("StandardMaterial3D_hneq6")
size = Vector2(0.1, 0.1)

[node name="FirstPersonPlayer" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_fnf2j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_yksil")

[node name="YawPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.512, 0)

[node name="PitchPivot" type="Node3D" parent="YawPivot"]

[node name="CameraTarget" type="Node3D" parent="YawPivot/PitchPivot"]

[node name="Camera3D" type="Camera3D" parent="YawPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
fov = 85.0
near = 0.01
far = 1000.0

[node name="GunGraphics" type="MeshInstance3D" parent="YawPivot/PitchPivot/Camera3D"]
transform = Transform3D(0.307788, -0.00267581, 0.000234103, 0, 0.0268266, 0.306629, -0.00268603, -0.306617, 0.0268255, 0.124, -0.107, -0.163)
layers = 2
mesh = SubResource("CylinderMesh_76qm2")

[node name="MuzzleFlash" type="OmniLight3D" parent="YawPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.394826, 0)
light_color = Color(1, 1, 0.611765, 1)
light_energy = 0.0
light_cull_mask = 4294967293
omni_range = 3.27979

[node name="BulletGraphics" type="GPUParticles3D" parent="YawPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.226, -0.18, -0.458)
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_jjsvv")
draw_pass_1 = SubResource("QuadMesh_vsdld")

[node name="MuzzleFlashTimer" type="Timer" parent="YawPivot/PitchPivot/Camera3D"]
wait_time = 0.1
one_shot = true

[node name="Rays" type="Node3D" parent="YawPivot/PitchPivot"]

[node name="Ray1" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(-8, -8, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray2" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(1.45519e-11, -8, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray3" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(8, -8, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray4" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(-8, 1.45519e-11, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray5" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(1.45519e-11, 1.45519e-11, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray6" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(8, 1.45519e-11, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray7" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(-8, 8, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray8" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(1.45519e-11, 8, -100)
collision_mask = 5
hit_from_inside = true

[node name="Ray9" type="RayCast3D" parent="YawPivot/PitchPivot/Rays"]
target_position = Vector3(8, 8, -100)
collision_mask = 5
hit_from_inside = true

[node name="Splatter1" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter2" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter3" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter4" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter5" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter6" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter7" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter8" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Splatter9" type="GPUParticles3D" parent="YawPivot/PitchPivot/Rays"]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_4bo7n")
draw_pass_1 = SubResource("QuadMesh_n1ffu")

[node name="Audio" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="FootstepTimer" type="Timer" parent="Audio"]
wait_time = 0.4
autostart = true

[node name="footstep1" type="AudioStreamPlayer3D" parent="Audio"]
attenuation_filter_db = 0.0

[node name="footstep2" type="AudioStreamPlayer3D" parent="Audio"]
attenuation_filter_db = 0.0

[node name="footstep3" type="AudioStreamPlayer3D" parent="Audio"]
attenuation_filter_db = 0.0

[node name="footstep4" type="AudioStreamPlayer3D" parent="Audio"]
attenuation_filter_db = 0.0

[node name="ActionWait" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="YawPivot/PitchPivot/Camera3D/MuzzleFlashTimer" to="." method="_on_muzzle_flash_timer_timeout"]
[connection signal="timeout" from="Audio/FootstepTimer" to="." method="_on_footstep_timer_timeout"]
[connection signal="timeout" from="ActionWait" to="." method="_on_action_wait_timeout"]
